# dependabot_test

./: pyproject.toml
.github/: dependabot.yml
