[tool.poetry]
name = "hoge"
version = "0.1.0"
description = "dependabot test"
authors = ["ny"]

[tool.poetry.dependencies]
python = "^3.7"
certifi = "2022.6.15"
requests = "2.27.1"
Jinja2 = "3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
